# shader-lab

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
src/flame/: CMakeLists.txt  Main.qml  flame.frag  main.cpp
src/sci_ui/: CMakeLists.txt  Main.qml  main.cpp  sci_ui.frag
src/shaped_video/: CMakeLists.txt  Main.qml  ShapedVideo.qml  main.cpp  shaped_video.frag
src/slash/: CMakeLists.txt  Main.qml  main.cpp  slash.frag
src/trapezoid_path_video/: CMakeLists.txt  Main.qml  PathVideo.qml  main.cpp  trapezoid_path_video.frag
